--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "mouzam",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "express": "^4.17.1",
     "node": "^14.8.0",
+    "path": "^0.12.7",
     "wowjs": "^1.1.3"
   }
 }
