--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "mouzam",
   "license": "ISC",
+  "engines": {
+    "node": "12.18.3"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
